2007-08-13	kaffeetisch

	* t/1.t
	* t/9.t
	* t/filename.t: Fix win32 test failures.

2007-08-01	kaffeetisch

	* gperl.h
	* typemap: Add char_own_ornull and gchar_own_ornull typemaps.

2007-07-08	kaffeetisch

	* Glib.pm
	* NEWS
	* README: Unstable release 1.152.

2007-07-07	kaffeetisch

	* GObject.xs: Register G_TYPE_INTERFACES as Glib::Interfaces to
	avoid having it appear under Glib::Object::_Unregistered in
	hierarchies in the generated POD.

	* GMainLoop.xs
	* t/9.t: Wrap g_main_context_is_owner and g_timeout_add_seconds.

2007-06-24	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.151.

2007-06-23	kaffeetisch

	* GUtils.xs
	* gperl.h
	* typemap
	* t/1.t: Wrap g_get_user_special_dir and provide converters for
	the new enum GUserDirectory.

	* t/g.t: In floating point tests, don't check for equality.
	Instead, check that numbers don't differ too much from their
	expected values.

2007-06-10	kaffeetisch

	* GKeyFile.xs, t/g.t: Wrap g_key_file_load_from_dirs.

2007-02-24	kaffeetisch

	* MakeHelper.pm: Use BSD make syntax for the BLIB_DONE stuff on
	BSD systems, unless the environment variable FORCE_GMAKE is set.

2007-01-08	kaffeetisch

	* Glib.pm, Makefile.PL, NEWS, README, copyright.pod: Unstable
	release 1.150.

2007-01-07	kaffeetisch

	* GenPod.pm: Only mark those objects as deprecated that have a
	non-empty list of replacements; this avoids marking each and every
	object as deprecated.  Move up the deprecation message in the POD
	to make it more prominent.  Also, hush the "podifying Foo"
	messages.

2007-01-06  Emmanuele Bassi  <ebassi@gnome.org>

	* ParseXSDoc.pm:
	* GenPod.pm: Add a "deprecated_by" key to the apidoc parser;
	you should use this to mark an object deprecated in favour of
	another.  Also add a __deprecated__ marker for functions and
	methods.

2006-12-30	kaffeetisch

	* Glib.xs: Call g_threads_init before g_type_init.  Required (and
	probably enforced in the near future) by recent glib versions.

2006-12-02	kaffeetisch
